# particle

./: .clang-format  .clang-tidy  .clangd  .envrc  .gitattributes  .gitignore  CMakeLists.txt
src/: greeting.cppm  main.cpp
src/platform/: macos_app.cpp  macos_app.cppm
src/render/: metal_renderer.cpp  metal_renderer.cppm
src/render/shaders/: particle_points.metal
src/sim/: particle_simulation.cpp  particle_simulation.cppm
